--- a/templates/CrowdDataCenterClone.template.yaml
+++ b/templates/CrowdDataCenterClone.template.yaml
@@ -34,7 +34,7 @@ Metadata:
       - Label:
           default: Networking
         Parameters:
-          - AssociatePublicIpAddress
+          - LoadBalancerScheme
           - CidrBlock
           - ExternalSubnets
           - InternalSubnets
@@ -51,6 +51,7 @@ Metadata:
         Parameters:
           - CustomDnsName
           - HostedZone
+          - SubDomainName
       - Label:
           default: Advanced (Optional)
         Parameters:
@@ -87,8 +88,6 @@ Metadata:
           - TomcatRedirectPort
           - TomcatScheme
     ParameterLabels:
-      AssociatePublicIpAddress:
-        default: Assign public IP
       CatalinaOpts:
         default: Catalina options
       CidrBlock:
@@ -157,6 +156,8 @@ Metadata:
         default: JVM Heap Size Override
       KeyPairName:
         default: Key Name *
+      LoadBalancerScheme:
+        default: Load Balancer Scheme
       LocalAnsibleGitRepo:
         default: Git repo for local-ansible
       LocalAnsibleGitSshKeyName:
@@ -165,8 +166,12 @@ Metadata:
         default: Enable App to Process Email
       SSLCertificateARN:
         default: SSL Certificate ARN
+      StartCollectd:
+        default: Start the collectd metrics agent
       StorageEncrypted:
         default: Encryption
+      SubDomainName:
+        default: Sub-domain for Hosted Zone (optional)
       TomcatAcceptCount:
         default: Tomcat Accept Count
       TomcatConnectionTimeout:
@@ -190,23 +195,18 @@ Metadata:
       VPC:
         default: VPC *
 Parameters:
-  AssociatePublicIpAddress:
-    Default: false
-    AllowedValues: [true, false]
-    ConstraintDescription: Must be 'true' or 'false'.
-    Description: Controls if the EC2 instances are assigned a public IP address
     Type: String
   CatalinaOpts:
-    Description: Pass in any additional jvm options to tune Catalina
+    Description: Pass in any additional JVM options to tune Catalina Tomcat
     Type: String
   CidrBlock:
     Default: '0.0.0.0/0'
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
-    Description: The CIDR IP range that is permitted to access the Crowd URL. Use 0.0.0.0/0 if you want public access from the internet.
-    Type: String
+    Description: CIDR block allowed to access the Atlassian product. This should be set to a trusted IP range; if you want to give public access use '0.0.0.0/0'.
     MinLength: 9
     MaxLength: 18
+    Type: String
   ClusterNodeInstanceType:
     Default: t3.medium
     AllowedValues:
@@ -315,13 +315,15 @@ Parameters:
     Type: String
   ClusterNodeMax:
     Default: 1
+    Description: Maximum number of nodes in the cluster.
     Type: Number
   ClusterNodeMin:
     Default: 1
+    Description: Minimum number of nodes in the cluster.
     Type: Number
   ClusterNodeVolumeSize:
     Default: 50
-    Description: Size of cluster node root volume in Gb (note - size based upon Application indexes x 4)
+    Description: Size of cluster node root volume in GB (note - size based upon Application indexes x 4)
     Type: Number
   CrowdDownloadUrl:
     Description: This parameter is used to download a custom Crowd version for testing purposes. Leave this parameter blank to automatically download the official version you specified earlier.
@@ -334,7 +336,7 @@ Parameters:
     Description: The version of Crowd to install
     Type: String
   CustomDnsName:
-    Description: 'Use custom existing DNS name for your Data Center instance. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
+    Description: 'Use custom existing DNS name for this Atlassian service. This will take precedence over HostedZone. Please note: you must own the domain and configure it to point at the load balancer.'
     Type: String
   DBInstanceClass:
     Default: db.t2.medium
@@ -376,18 +378,18 @@ Parameters:
     Type: String
   DBIops:
     Default: 1000
-    ConstraintDescription: 'Must be in the range 1000 - 30000'
-    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00'
+    ConstraintDescription: Must be in the range 1000 - 30000
+    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage must be between 3.00 and 10.00.'
     MinValue: 1000
     MaxValue: 30000
     Type: Number
   DBMasterUserPassword:
     AllowedPattern: '[a-zA-Z0-9]*'
     ConstraintDescription: Must be at least 8 alphanumeric characters.
-    Description: Database admin account password.
-    NoEcho: True
+    Description: Password for the master ('postgres') account.
     MinLength: 8
     MaxLength: 128
+    NoEcho: true
     Type: String
   DBMaxIdle:
     Default: 20
@@ -406,6 +408,7 @@ Parameters:
     Description: The minimum number of idle database connections that are kept open at any time
     Type: String
   DBMultiAZ:
+    Description: Whether to provision a multi-AZ RDS instance.
     Default: false
     AllowedValues:
       - true
@@ -495,6 +498,14 @@ Parameters:
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: AWS::EC2::KeyPair::KeyName
+  LoadBalancerScheme:
+    Default: internet-facing
+    AllowedValues:
+      - internet-facing
+      - internal
+    ConstraintDescription: Must be 'internet-facing' or 'internal'.
+    Description: Controls if the load balancer is assigned a public IP address
+    Type: String
   LocalAnsibleGitRepo:
     Description: For additional node customization, provide repo location to git clone. This must be in format git@bitbucket.org:atlassian/atlassian-local-ansible-example.git if using Bitbucket Cloud, or ssh://git@stash.example.com:7997/my-local-ansible.git (ie protocol included) if using Bitbucket Server.
     Type: String
@@ -508,6 +519,9 @@ Parameters:
     ConstraintDescription: Must be 'true' or 'false'.
     Default: false
     Description: Enable mail processing and sending
+    Type: String
+  SubDomainName:
+    Description: Leave this field blank to use your stack name as the sub-domain.
     Type: String
   SSLCertificateARN:
     Description: Amazon Resource Name (ARN) of your SSL certificate. If you want to use your own certificate that you generated outside of Amazon, you need to first import it to AWS Certificate Manager. After a successful import, you'll receive the ARN. If you want to create a certificate with AWS Certificate Manager (ACM certificate), you will receive the ARN after it's successfully created.
@@ -567,7 +581,7 @@ Parameters:
     Type: String
   TomcatScheme:
     Default: http
-    Description: The name of the protocol you wish to have returned, ie "https" for an SSL Connector. The value of this setting also configures Tomcat's proxy port (443/80) and secure (true/false) settings appropriately.
+    Description: "The name of the protocol you wish to have returned, ie 'https' for an SSL Connector. The value of this setting also configures Tomcat's proxy port (443/80) and secure (true/false) settings appropriately."
     Type: String
     AllowedValues: [http, https]
   VPC:
@@ -597,8 +611,8 @@ Conditions:
     !Equals [!Ref StorageEncrypted, true]
   UseHostedZone:
     !Not [!Equals [!Ref HostedZone, '']]
-  UsePublicIp:
-    !Equals [!Ref AssociatePublicIpAddress, 'true']
+  UseSubDomainName:
+    !Not [!Equals [!Ref SubDomainName, '']]
 Mappings:
   AWSInstanceType2Arch:
     c4.xlarge:
@@ -979,6 +993,13 @@ Resources:
                     - !Sub '${AWS::StackName} sg'
                 Effect: Allow
                 Resource: ['*']
+        - PolicyName: !Sub '${AWS::StackName}-ansible-custom-policy'
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Action: ['iam:ListRolePolicies', 'iam:GetRolePolicy']
+                Effect: Allow
+                Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-JiraClusterNodeRole*'
   CrowdClusterNodeInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -990,8 +1011,8 @@ Resources:
     Properties:
       DesiredCapacity: !Ref ClusterNodeMin
       LaunchConfigurationName: !Ref ClusterNodeLaunchConfig
-      MaxSize: !Ref ClusterNodeMax
       MinSize: !Ref ClusterNodeMin
+      MaxSize: !Ref ClusterNodeMax
       LoadBalancerNames:
         - !Ref LoadBalancer
       VPCZoneIdentifier: !Ref InternalSubnets
@@ -1010,22 +1031,18 @@ Resources:
       AWS::CloudFormation::Init:
         config:
           packages:
-            !If
-              - DoCollectd
-              - yum:
-                  collectd: []
+            yum:
+              !If
+                - DoCollectd
+                - collectd: []
                   collectd-java: []
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
                   collectd-disk: []
-              - !Ref "AWS::NoValue"
           files:
             /etc/atl:
-              mode: "000640"
-              owner: root
-              group: root
               content:
-                'Fn::Join':
+                !Join
                   - "\n"
                   -
                     - !If [SSLScheme, "ATL_SSL_PROXY=true", !Ref "AWS::NoValue"]
@@ -1081,14 +1098,14 @@ Resources:
                     - "ATL_RELEASE_S3_BUCKET=atlassian-software"
                     - "ATL_RELEASE_S3_PATH=releases"
                     - "ATL_SSL_SELF_CERT_ENABLED=false"
+              mode: "000640"
+              owner: root
+              group: root
             /etc/cfn/cfn-hup.conf:
-              content:
-                !Join
-                  - "\n"
-                  -
-                    - "[main]"
-                    - !Sub ["region=${Region}", Region: !Ref "AWS::Region"]
-                    - !Sub ["stack=${StackId}", StackId: !Ref "AWS::StackId"]
+              content: !Sub |
+                [main]
+                region=${AWS::Region}
+                stack=${AWS::StackName}
               mode: "000400"
               owner: root
               group: root
@@ -1395,7 +1412,7 @@ Resources:
     Properties:
       HostedZoneName: !Ref HostedZone
       Comment: Route53 cname for the RDS
-      Name: !Join ['.', [!Ref 'AWS::StackName', 'db', !Ref 'HostedZone']]
+      Name: !Sub "${AWS::StackName}.db.${HostedZone}"
       Type: CNAME
       TTL: '900'
       ResourceRecords:
@@ -1450,7 +1467,10 @@ Resources:
     Properties:
       HostedZoneName: !Ref HostedZone
       Comment: Route53 cname for the ALB
-      Name: !Join ['.', [!Ref "AWS::StackName", !Ref 'HostedZone']]
+      Name: !Sub
+        - "${SubDomainName}.${HostedZone}"
+        - SubDomainName: !If [UseSubDomainName, !Ref 'SubDomainName', !Ref 'AWS::StackName']
+          HostedZone: !Ref 'HostedZone'
       Type: CNAME
       TTL: '900'
       ResourceRecords:
@@ -1474,7 +1494,7 @@ Resources:
           CidrIp: !Ref CidrBlock
       Tags:
         - Key: Name
-          Value: !Join [' ', [!Ref "AWS::StackName", 'sg']]
+          Value: !Sub "${AWS::StackName} sg"
       VpcId: !Ref VPC
   SecurityGroupIngress:
     Type: AWS::EC2::SecurityGroupIngress
@@ -1515,9 +1535,8 @@ Outputs:
   SGname:
     Description: The name of the SecurityGroup
     Value: !Ref SecurityGroup
-    Export: {
-      Name: !Join ['', [!Ref 'AWS::StackName', '-SGname']]
-    }
+    Export:
+      Name: !Sub "${AWS::StackName} -SGname"
   DBEndpointAddress:
     Description: The Database Connection String
     Value: !GetAtt DB.Endpoint.Address
